--- a/src/app/pages/instructor/components/footer/footer.component.html
+++ b/src/app/pages/instructor/components/footer/footer.component.html
@@ -1,36 +1,40 @@
-<footer class="footer mt-40">
-    <div class="container-fluid">
-        <div class="row">					
-            <div class="col-lg-12">
-                <div class="item_f1">
-                    <a >{{"Copyright Policy" | translate}}</a>
-                    <a >{{"Terms" | translate}}</a>
-                    <a >{{"Privacy Policy" | translate}}</a>
+<div class="wrapper">
+    <footer class="footer mt-40">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="item_f1">
+                        <a>{{"Copyright Policy" | translate}}</a>
+                        <a>{{"Terms" | translate}}</a>
+                        <a>{{"Privacy Policy" | translate}}</a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-12">
-                <div class="footer_bottm">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <ul class="fotb_left">
-                                
-                                <li>
-                                    <p>© 2020 <strong>{{"Smart Academy" | translate}}</strong>{{". All Rights Reserved." | translate}}</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="edu_social_links">
-                                <a ><i class="uil uil-facebook-f"></i></a>
-                                <a ><i class="uil uil-twitter"></i></a>
-                                <a ><i class="uil uil-linkedin"></i></a>
-                                <a ><i class="uil uil-instagram"></i></a>
-                                <a ><i class="uil uil-youtube"></i></a>
+                <div class="col-lg-12">
+                    <div class="footer_bottm">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <ul class="fotb_left">
+
+                                    <li>
+                                        <p>© 2020
+                                            <strong>{{"Smart Academy" | translate}}</strong>{{". All Rights Reserved." | translate}}
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="edu_social_links">
+                                    <a><i class="uil uil-facebook-f"></i></a>
+                                    <a><i class="uil uil-twitter"></i></a>
+                                    <a><i class="uil uil-linkedin"></i></a>
+                                    <a><i class="uil uil-instagram"></i></a>
+                                    <a><i class="uil uil-youtube"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
+</div>
