--- a/src/app/pages/user/my-courses/my-courses.component.html
+++ b/src/app/pages/user/my-courses/my-courses.component.html
@@ -13,7 +13,7 @@
 
                 <div *ngFor="let course of approvedCoursesArray"  class="col-xl-3 col-lg-6 col-md-6">
                     <div class="fcrse_1 mb-20">
-                        <a [routerLink]="['/user/study',course.id]" routerLinkActive="router-link-active"
+                        <a [routerLink]="['/user/study',course.course_id]" routerLinkActive="router-link-active"
                             class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
