fix auth, login, and redirect

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,6 +1,6 @@
 <!-- navbar-->
 <div class="home">
-  <header class="header">
+  <header class="lp-header">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <!-- Navbar brand--><a class="navbar-brand font-weight-bold"><img
