--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -79,7 +79,7 @@
 								<label> {{"sign Up as" | translate}} </label>
 
 								<input value="1" type="radio" formControlName="signAs"
-									(click)="onSignUpAsClick($event)" checked='true'>
+									(click)="onSignUpAsClick($event)">
 								<label> {{"student" | translate}} </label>
 
 								<input value="2" type="radio" formControlName="signAs"
