--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,37 +1,39 @@
-	<!-- Header Start -->
-    <header class="lp-header">
-        <nav class="navbar navbar-expand-lg">
-          <div class="container">
-            <!-- Navbar brand--><a  class="navbar-brand font-weight-bold"><img src="assets/images/logo.jpeg" alt="..." class="img-fluid"></a>
-            <!-- Navbar toggler button-->
-            <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right">Menu<i class="icon ion-md-list ml-2"></i></button>
-            <div id="navbarSupportedContent" class="collapse navbar-collapse">
-              <ul class="navbar-nav mx-auto ml-auto">
-                    <!-- Link-->
-                    <li class="nav-item"> <a  class="nav-link">About Us</a></li>
-                    
-                <li class="nav-item dropdown"><a id="pages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">departments</a>
-                  <div class="dropdown-menu">
-                    <a  class="dropdown-item">Arabic</a>
-                    <a  class="dropdown-item">English</a>
-                    <a  class="dropdown-item">Math</a></div>
-                </li>
+<!-- Header Start -->
+<header class="lp-header">
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <!-- Navbar brand--><a href="index.html" class="navbar-brand font-weight-bold"><img src="assets/images/logo.jpeg" alt="..." class="img-fluid"></a>
+        <!-- Navbar toggler button-->
+        <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right">Menu<i class="icon ion-md-list ml-2"></i></button>
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+          <ul class="navbar-nav mx-auto ml-auto">
                 <!-- Link-->
-                <li class="nav-item"> <a  class="nav-link">Contact Us</a></li>
-              </ul>
-              <ul class="navbar-nav">
-                <li class="nav-item"><a  data-toggle="modal" data-target="#login" class="nav-link font-weight-bold mr-3">Login</a></li>
-                <li class="nav-item"><a  class="navbar-btn btn btn-primary">Get Started</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
+                <li class="nav-item"> <a href="schedule.html" class="nav-link">About Us</a></li>
+                
+            <li class="nav-item dropdown"><a id="pages" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">departments</a>
+              <div class="dropdown-menu">
+                <a href="#" class="dropdown-item">Arabic</a>
+                <a href="#" class="dropdown-item">English</a>
+                <a href="#" class="dropdown-item">Math</a></div>
+            </li>
+            <!-- Link-->
+            <li class="nav-item"> <a href="#" class="nav-link">Contact Us</a></li>
+          </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="#" data-toggle="modal" data-target="#login" class="nav-link font-weight-bold mr-3">Login</a></li>
+            <li class="nav-item"><a href="#" class="navbar-btn btn btn-primary">Get Started</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
 
 <!-- Header End -->
 <!-- Body Start -->
 <div class="wrapper p-0 _new89">		
+
+<div class="contact1256 mt-0">
     <div class="_215b15">
         <div class="container">
             <div class="row">
@@ -41,7 +43,7 @@
                             <div class="ttl121">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a [routerLink]="['']" routerLinkActive="router-link-active" >{{'Home' | translate}}</a></li>
+                                        <li class="breadcrumb-item"><a href="index.html">{{'Home' | translate}}</a></li>
                                         <li class="breadcrumb-item active" aria-current="page">{{'Contact Us' | translate}}</li>
                                     </ol>
                                 </nav>
@@ -55,74 +57,73 @@
             </div>
         </div>
     </div>
-    <div class="contact1256">
-        <div class="container">
-            <div class="row">					
-                
-                <div class="col-lg-8">
-                    <div class="contact_map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109179.94648102134!2d29.88484661559832!3d31.224238671493772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c49126710fd3%3A0xb4e0cda629ee6bb9!2sAlexandria%2C%20Alexandria%20Governorate!5e0!3m2!1sen!2seg!4v1595815185573!5m2!1sen!2seg" width="748" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>						</div>												
-                </div>
-                <div class="col-lg-4">
-                    <div class="contact_info">
-                        <div class="checkout_title">
-                            <h4>{{'Contact Information' | translate}}</h4>
-                            <img src="images/line.svg" alt="">
-                        </div>
-                        <ul class="contact_list_info">
-                            <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-location-point"></i>Main Address :</span><p> Elhoreya Road, main street, Alexandria, Egypt</p></div></li>
-                            <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-envelope"></i>Email Address :</span><p>Info@smart-academy@gmail.com</p></div></li>
-                            <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-mobile-android-alt"></i>Phone Number :</span><p>+211234567890, 01010000000</p></div></li>
+    <div class="container">
+        <div class="row">					
+            
+            <div class="col-lg-8">
+                <div class="contact_map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109179.94648102134!2d29.88484661559832!3d31.224238671493772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c49126710fd3%3A0xb4e0cda629ee6bb9!2sAlexandria%2C%20Alexandria%20Governorate!5e0!3m2!1sen!2seg!4v1595815185573!5m2!1sen!2seg" width="748" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>						</div>												
+            </div>
+            <div class="col-lg-4">
+                <div class="contact_info">
+                    <div class="checkout_title">
+                        <h4>{{'Contact Information' | translate}}</h4>
+                        <img src="images/line.svg" alt="">
+                    </div>
+                    <ul class="contact_list_info">
+                        <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-location-point"></i>Main Address :</span><p> Elhoreya Road, main street, Alexandria, Egypt</p></div></li>
+                        <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-envelope"></i>Email Address :</span><p>Info@smart-academy@gmail.com</p></div></li>
+                        <li><div class="txt_cntct"><span class="cntct_895"><i class="uil uil-mobile-android-alt"></i>Phone Number :</span><p>+211234567890, 01010000000</p></div></li>
+                    </ul>
+                    <div class="edututs_links_social">
+                        <ul class="tutor_social_links">
+                            <li><a href="#" class="fb"><i class="uil uil-facebook-f"></i></a></li>
+                            <li><a href="#" class="tw"><i class="uil uil-twitter"></i></a></li>
+                            <li><a href="#" class="ln"><i class="uil uil-linkedin"></i></a></li>
+                            <li><a href="#" class="yu"><i class="uil uil-youtube"></i></a></li>
                         </ul>
-                        <div class="edututs_links_social">
-                            <ul class="tutor_social_links">
-                                <li><a class="fb"><i class="uil uil-facebook-f"></i></a></li>
-                                <li><a class="tw"><i class="uil uil-twitter"></i></a></li>
-                                <li><a class="ln"><i class="uil uil-linkedin"></i></a></li>
-                                <li><a class="yu"><i class="uil uil-youtube"></i></a></li>
+                    </div>
+                </div>												
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer class="footer mt-40">
+    <div class="container-fluid">
+        <div class="row">					
+            <div class="col-lg-12">
+                <div class="item_f1">
+                    <a href="terms_of_use.html">Copyright Policy</a>
+                    <a href="terms_of_use.html">Terms</a>
+                    <a href="terms_of_use.html">Privacy Policy</a>
+                </div>
+            </div>
+            <div class="col-lg-12">
+                <div class="footer_bottm">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="fotb_left">
+                                
+                                <li>
+                                    <p>© 2020 <strong>Smart Academy</strong>. All Rights Reserved.</p>
+                                </li>
                             </ul>
                         </div>
-                    </div>												
+                        <div class="col-md-6">
+                            <div class="edu_social_links">
+                                <a href="#"><i class="uil uil-facebook-f"></i></a>
+                                <a href="#"><i class="uil uil-twitter"></i></a>
+                                <a href="#"><i class="uil uil-linkedin"></i></a>
+                                <a href="#"><i class="uil uil-instagram"></i></a>
+                                <a href="#"><i class="uil uil-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    
-    <footer class="footer mt-40">
-        <div class="container-fluid">
-            <div class="row">					
-                <div class="col-lg-12">
-                    <div class="item_f1">
-                        <a>Copyright Policy</a>
-                        <a>Terms</a>
-                        <a>Privacy Policy</a>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="footer_bottm">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <ul class="fotb_left">
-                                    
-                                    <li>
-                                        <p>© 2020 <strong>Smart Academy</strong>. All Rights Reserved.</p>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="edu_social_links">
-                                    <a ><i class="uil uil-facebook-f"></i></a>
-                                    <a ><i class="uil uil-twitter"></i></a>
-                                    <a ><i class="uil uil-linkedin"></i></a>
-                                    <a ><i class="uil uil-instagram"></i></a>
-                                    <a ><i class="uil uil-youtube"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+</footer>
 </div>
 <!-- Body End -->
