--- a/src/app/pages/instructor/components/sidebar/sidebar.component.html
+++ b/src/app/pages/instructor/components/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@
     <span class="collapse_menu--label"></span>
 </label> -->
 <header class="db-header clearfix">
-    <button id="collapse_menu" class="collapse_menu">
+    <button (click)="collapse()" id="collapse_menu" class="collapse_menu">
         <i class="uil uil-bars collapse_menu--icon "></i>
         <span class="collapse_menu--label"></span>
     </button>
